# plugins-ng

./: Example.hs  plugins-ng.cabal
Plugins/: Base.hs  Filewatch.hs
