name:                plugins-ng
version:             0.1.0.0
synopsis:            automatic, dynamic code recompilation and reloading
-- description:
homepage:            https://github.com/Happstack/plugins-ng
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
copyright:           2014, Jeremy Shaw
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  Filter.hs Filter2.hs

library
  exposed-modules:     Plugins.Base, Plugins.Filewatch
  -- other-modules:
  other-extensions:    OverloadedStrings, TemplateHaskell
  build-depends:       base             >= 4.6,
                       containers       >= 0.5,
                       fsnotify         >= 0.0 && < 0.1,
                       ghc              >= 7.6,
                       ghc-paths        >= 0.1,
                       stm              >= 2.4,
                       system-filepath  >= 0.4 && < 0.5,
                       template-haskell >= 2.8,
                       th-lift          >= 0.6
  -- hs-source-dirs:
  default-language:    Haskell2010

executable example
  main-is:             Example.hs
  build-depends:       base             >= 4.6,
                       containers       >= 0.5,
                       fsnotify         >= 0.0 && < 0.1,
                       ghc              >= 7.6,
                       ghc-paths        >= 0.1,
                       stm              >= 2.4,
                       system-filepath  >= 0.4 && < 0.5,
                       template-haskell >= 2.8,
                       th-lift          >= 0.6

  default-language:    Haskell2010
